# FEUP-ROBO-Reactive-Robot

./: CMakeLists.txt  README.md  package.xml
include/: line_following.h
src/: line_following.cpp  main.cpp
stdr_files/stdr_launchers/launch/: jpmsc_CV2.launch  jpmsc_SAV2.launch  jpmsc_SV2.launch  jpmsc_UV2.launch
stdr_files/stdr_resources/maps/: jpmsc_CV2.yaml  jpmsc_SAV2.yaml  jpmsc_SV2.yaml  jpmsc_UV2.yaml
stdr_files/stdr_resources/resources/robots/: jpmsc_reactive.yaml
